--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-03-12
+% \update      2016-05-20
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -78,7 +78,19 @@
    \emph{Extension of midicomp/midi2text to convert between MIDI and ASCII
       text format.}
    \url{https://github.com/ahlstromcj/midicvt}
-   2015.
+   2015-2016.
+
+   \bibitem{midicontrol}
+   linuxaudio.org
+   \emph{seq24: toggle sequences with a MIDI controller}
+   \url{http://wiki.linuxaudio.org/wiki/seq24togglemiditutorial}
+   2013.
+
+   \bibitem{midicontroltable}
+   midi.org
+   \emph{Summary of MIDI Messages}
+   \url{https://www.midi.org/specifications/item/table-1-summary-of-midi-message#2}
+   Year unknown.
 
    \bibitem{portmidi}
    PortMedia team
