--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-05-19
+% \update      2016-05-20
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -183,7 +183,7 @@
    by hitting the (default) Home key to make it the playing screenset.
    There are a total of 32 sets, for a total of 1024 loops/patterns. 
    Only one screen set can be playing at a time, according to other notes we
-   have found.
+   have found.  Have not yet tried to verify this assertion.
 
 \begin{figure}[H]
    \centering 
@@ -354,7 +354,7 @@
          start so that it can move through the pattern, again and again.
       \item \textbf{Armed}.
          See \figureref{fig:pattern_window_main_panel_items}; it shows a black
-         and grey pattern.  The black color indicates that the pattern is armed
+         and white pattern.  The black color indicates that the pattern is armed
          (unmuted), and will play if playback is initiated in the pattern
          \index{live mode}
          window in live mode.
@@ -594,8 +594,8 @@
 
    When one of these snapshot keys is pressed, the state of the patterns
    (which ones are armed versus unarmed) is instantly saved.  While the
-   snapshot key is pressed, on can then change the state of the patterns to
-   change how the song plays back.  When the snapshot key is released, the
+   snapshot key is held pressed, one can then change the state of the patterns
+   to change how the song plays back.  When the snapshot key is released, the
    original saved state of the patterns is restored.
 
    \index{keys!alt}
