--- a/tex/seq64_rc_file.tex
+++ b/tex/seq64_rc_file.tex
@@ -48,7 +48,7 @@
    Like \textsl{Seq24}, \textsl{Sequencer64} provides a way to control the
    application to some extent via a MIDI controller, such as a MIDI keyboard or
    a MIDI pad device.  The current section describes this feature;
-   additional resources can be found a \url{linuxaudio.org}
+   additional resources can be found at \url{linuxaudio.org}
    (\cite{midicontrol}).
 
    \index{[midi-control]}
